# SPDX-License-Identifier: GPL-2.0-or-later

test_riscv64_timeouts = {
  'boston' : 120,
  'k230' : 120,
  'tuxrun' : 120,
}

tests_riscv64_system_quick = [
  'migration',
  'opensbi',
]

tests_riscv64_system_thorough = [
  'endianness',
  'boston',
  'k230',
  'sifive_u',
  'tt_atlantis',
  'tuxrun',
]
